src/styles.css
body {
  font-family: "Antic Slab", serif;
  line-height: 1.2;
}

h1 {
  position: relative;
  font-size: 24px;
  font-weight: 100;
  line-height: 28px;
  padding-top: 15px;
  padding-bottom: 7px;
  margin: 0px;
}

ul {
  padding: 0;
  margin: 0 0 15px;
}

li {
  list-style: none;
  font-size: 14px;
  font-weight: 100;
  position: relative;
  left: 92px;
}

#date {
  font-size: 14px;
  font-weight: bold;
  position: relative;
  bottom: 70px;
}

#update {
  position: relative;
  bottom: 70px;
}

i {
  color: #cc376b;
  font-size: 60px;
  position: relative;
  bottom: 30px;
}

.weather-app-wrapper {
  margin: 20px auto;
  max-width: 600px;
}
.weather-app {
  border: 1px solid #fa8c80;
  border-radius: 25px;
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  background: linear-gradient(
    to right,
    #ff8177 0%,
    #ff867a 0%,
    #ff8c7f 21%,
    #f99185 52%,
    #cf556c 78%,
    #b12a5b 100%
  );
}
.temperature {
  font-size: 45px;
  font-weight: 400;
  position: relative;
  bottom: 23px;
  left: 15px;
}
.units {
  position: relative;
  bottom: 45px;
  left: 7px;
  font-size: 12.5px;
}

.units .active {
  color: black;
  cursor: default;
}
.units .active:hover {
  text-decoration: none;
}

#conditions {
  position: relative;
  bottom: 37px;
}

#conditions2 {
  position: relative;
  bottom: 37px;
}
#weather-conditions {
  font-style: italic;
}
#current-button {
  background: #f99084;
  color: white;
  border-radius: 50px;
  border: 1px solid #f3a39b;
}

p {
  text-align: center;
  font-size: 16px;
}

